<resources>
    <string name="app_name">Reversi Revolution Game</string>
    <string name="btnHelp">Help</string>
    <string name="btnDB">Game Logs</string>
    <string name="btnInit">Init Game</string>
    <string name="btnExit">Exit</string>

    <!--- Help Activity -->
    <string name="HelpTitle">Help</string>
    <string name="backBtn">Go back</string>

    <!--- Options Activity -->
    <string name="OptionsTitle">Options</string>
    <string name="startBtn">Start</string>
    <string name="alias">Username</string>
    <string name="optionsHint1">Enter your Username: </string>
    <string name="size">Size of the grid: </string>
    <string name="time">Against the clock: </string>

    <!--- Results Activity -->
    <string name="ResultsTitle">Results</string>
    <string name="ResultsTitle2">Results of the game</string>
    <string name="date">Date and time of the game</string>
    <string name="resume">Log of the game</string>
    <string name="email">E-Mail to send the log</string>
    <string name="user">You: </string>
    <string name="ia">Device: </string>
    <string name="cellsToFinish">Cells to finish: </string>

    <!--- Help Activity -->
    <string name="help">El juego se inicia con cuatro fichas posicionadas en el centro del tablero en forma de un cuadrado, dos mostrando el lado blanco hacia arriba y dos el lado negro. El primer movimiento lo realiza el jugador con las fichas negras. Para que un jugador pueda colocar una ficha en una casilla del tablero, es necesario que haya por lo menos una línea recta (horizontal, vertical o diagonal) sin espacios vacíos entre la posición que el jugador desea y otra ficha de su color, y que haya una o más fichas del oponente entre ellas. Quando un jugador haga una jugada válida, todas las fichas del oponente que estén en una línea recta (horizontal, vertical o diagonal) con la pieza recién colocada y entre la pieza recién colocada y otra pieza del jugador que hizo el movimiento, serán giradas y pasan a ser del color de ese jugador. El juego termina cuando ninguno de los jugadores pueda hacer movimientos (por ejemplo, cuando todas las casas estén ocupadas o todas las fichas del tablero estén con el mismo color girado hacia arriba). Vence el jugador que posea más fichas que el adversario. Si ambos jugadores tienen la misma cantidad de fichas, el juego termina en empate.</string>

    <!--- Strings for the Log -->
    <string name="Alias">Alias:</string>
    <string name="SizeOfTheGrid">Size of the grid:</string>
    <string name="Win">You have win!!</string>
    <string name="Lose">You have lose!!</string>
    <string name="Draw">You have draw!!</string>
    <string name="Difference">cells of difference</string>
    <string name="Left">cells left.</string>
    <string name="Time">No more time! </string>
    <string name="You">You: </string>
    <string name="Player2">Your Opponent: </string>
    <string name="sendResults">Send the results</string>
    <string name="subject">Results of the game - Revolution Reversi</string>
    <string name="Encallat">You are blocked!!</string>

    <!-- Shared Preferences -->
    <string name="GameOptions">Game Options</string>
    <string name="default_user">user1</string>
    <string name="pref_username_dialog">Fill the gap with the username</string>
    <string name="pref_username_summary">Your username</string>
    <string name="pref_username_title">User</string>
    <string name="pref_gridSize_title">Size of the grid</string>
    <string name="pref_gridSize_summary">Choose your grid size</string>
    <string name="pref_gridSize_dialog">Size of the grid</string>
    <string name="pref_controlTime_title">Time Control</string>
    <string name="pref_controlTime_summary">Enable or disable the time countdown</string>
    <string name="pref_controlTime_dialog">Enable/Disable time</string>
    <string name="pref_timeSec_title">Game time</string>
    <string name="pref_timeSec_summary">Select the seconds</string>
    <string name="pref_timeSec_dialog">Select the time</string>
    <string name="pref_players_title">Number of players</string>
    <string name="pref_difficulty_summary">Select number of players</string>
    <string name="pref_difficulty_dialog">Number of players</string>
    <string name="Save">Data have been saved successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>