<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="agut_giralt.androidpractreversi.activities.MainActivity">


    <TextView
        android:id="@+id/title_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/options"
        android:text="@string/OptionsTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_config">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!---
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Number of people to play"/>
                    <RadioGroup
                        android:id="@+id/RadioGroupPlayers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/OnePlayer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"/>
                        <RadioButton
                            android:id="@+id/TwoPlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"/>
                    </RadioGroup>
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user"
                android:text="@string/alias"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/aliasEditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/optionsHint1" />
            <!---
                    <EditText
                        android:id="@+id/aliasEditText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
            -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/grid"
                android:paddingBottom="2dp"
                android:paddingTop="20dp"
                android:text="@string/size"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="8" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/conometroblanc"
                android:paddingBottom="2dp"
                android:paddingTop="20dp"
                android:text="@string/time"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/startBtn" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
